apps/medium-place/vaultwarden/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    acme.cert-manager.io/http01-edit-in-place: true
spec:
  tls:
    - hosts:
        - new-vault.medium.place
      secretName: vaultwarden-tls
  rules:
    - host: new-vault.medium.place
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: vaultwarden
                port:
                  number: 80
